# MC937

DEMOS/DEMO09_Gouraud/: CMakeCache.txt  CMakeLists.txt  Makefile  PyramidRenderer  cmake_install.cmake  demo9  dragao2.mtl  main.cpp  main_gouraud_no_ray_casting.cpp  main_og.cpp  output.mtl
DEMOS/DEMO10_ADS/: bunny_normals.csv  bunny_normals_low.csv  main.py
DEMOS/DEMO11_AABB/: CMakeCache.txt  CMakeLists.txt  Lab2  Makefile  cmake_install.cmake  main.cpp
DEMOS/DEMO12_Ray_Casting/: main.py  requirements.txt
Lab1 - esquenta/: CMakeLists.txt  Lab1 main.cpp
Lab2/: CMakeCache.txt  CMakeLists.txt  Lab2  Makefile  cmake_install.cmake  main.cpp
Lab3/: CMakeLists.txt  output.mtl
Lab3/Lab3_Fernando_Rodrigues_247409/: main.cpp
